--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@ main {
   position: relative;
   display: flex;
   z-index: 2;
-  padding-top: 4rem;
+  padding: 4rem 0.55rem 0.8rem 0.8rem;
 }
 
 main > section {
@@ -137,7 +137,7 @@ h2 {
 main > div {
   width: 64%;
   height: calc(100% - 0.55rem);
-  padding: 0.55rem 0.8rem;
+  padding-top: 0.5rem;
 }
 
 main div section:first-of-type {
@@ -169,15 +169,14 @@ main div section:first-of-type ul {
   margin: 0rem;
   display: flex;
   padding-top: 1rem;
-  padding-left: 0.25rem;
+  padding-left: 0rem;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 2rem;
 }
 
 main div section:first-of-type ul li {
   list-style: none;
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 main div section:first-of-type ul li a {
@@ -272,10 +271,12 @@ main div section:nth-of-type(2) div:first-of-type a div {
 main div section:nth-of-type(2) div:first-of-type a div div {
   display: flex;
   flex-direction: column;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 main div section:nth-of-type(2) div:first-of-type a div div p {
-  padding: 0.25rem 1rem;
+  padding: 0.25rem 0rem;
   text-align: end;
   font-weight: 300;
   margin-left: auto;
@@ -426,7 +427,7 @@ main div section:nth-of-type(3) > div div p {
   main {
     flex-direction: column;
     align-items: center;
-    margin-top: 3.5rem;
+    padding-top: 4.5rem;
   }
 
   main > div {
@@ -434,12 +435,12 @@ main div section:nth-of-type(3) > div div p {
   }
 
   main > section {
-    padding-bottom: 44rem;
-    margin: 1.25rem auto;
+    margin: 0rem auto;
+    padding: 0rem 0rem 46rem 0rem;
   }
 
   h1 {
-    font-size: 2.75rem;
+    font-size: 2.6rem;
     margin-top: 0rem;
   }
 
